# Alaska

./: .gitignore  CMakeLists.txt  LeiaMe.txt  README.md
0 UML/: DiagramaJogoModelo.uml  DiagramaJogoModelo.~ml
include/: Alaskapp.h  Chao.h  Colisoes.h  Ente.h  Entidade.h  Eventos.h  Fase.h  FaseNoite.h  Fundo.h  Gelo.h  Graficos.h  Ice_Spike.h  Inimigo.h  Jogador.h  JogoAlaska.h  Lista.h  ListaEntidades.h  Lobo.h  Menu.h  Nevoso.h  Obstaculo.h  Personagem.h  Plataforma.h  Registro.h  pch.h
include/Entidades/: Bola_de_Neve.h  Chao.h  Entidade.h  Fundo.h
include/Entidades/Obstaculos/: Conjunto_Estalagmites.h  Gelo.h  Ice_Spike.h  Obstaculo.h  Plataforma.h
include/Entidades/Personagens/: Abominavel.h  Inimigo.h  Jogador.h  Lobo.h  Nevoso.h  Personagem.h
include/Fases/: Caverna.h  Fase.h  FaseNoite.h  Tundra.h
include/Gerenciadores/: Colisoes.h  Eventos.h  Gerenciador_Colisoes.h  Gerenciador_Eventos.h  Gerenciador_Grafico.h  Graficos.h
include/Listas/: Lista.h  ListaEntidades.h
save/: arquivo_de_salvamento.txt
src/: Alaskapp.cpp  Chao.cpp  Colisoes.cpp  Ente.cpp  Entidade.cpp  Eventos.cpp  Fase.cpp  FaseNoite.cpp  Fundo.cpp  Gelo.cpp  Graficos.cpp  Ice_Spike.cpp  Inimigo.cpp  Jogador.cpp  ListaEntidades.cpp  Lobo.cpp  Menu.cpp  Obstaculo.cpp  OpcaoMenu.cpp  Personagem.cpp  Plataforma.cpp  Registro.cpp  main.cpp
src/Entidades/: Bola_de_Neve.cpp  Chao.cpp  Entidade.cpp  Fundo.cpp
src/Entidades/Obstaculos/: Conjunto_Estalagmites.cpp  Gelo.cpp  Ice_Spike.cpp  Obstaculo.cpp  Plataforma.cpp
src/Entidades/Personagens/: Abominavel.cpp  Inimigo.cpp  Jogador.cpp  Lobo.cpp  Nevoso.cpp  Personagem.cpp
src/Fases/: Caverna.cpp  Fase.cpp  FaseNoite.cpp  Tundra.cpp
src/Gerenciadores/: Colisoes.cpp  Eventos.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Eventos.cpp  Gerenciador_Grafico.cpp  Graficos.cpp
src/Listas/: ListaEntidades.cpp  RelacaoAbominavelBola.cpp  RelacaoBolaAbominavel.cpp  RelacaoInimigoJogador.cpp
